# deepali

./: .dockerignore  .flake8  .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TODO  conda.yaml  conda_macos.yaml  deepali.code-workspace  pyproject.toml  pyrightconfig.json  setup.py
.github/workflows/: checks.yml  docs.yml  gh-pages.yml  packages.yml  release.yml  tests.yml
conda/: Makefile  README.md  environment.conda-lock.yml  environment.devenv.yml  environment.linux-64.yml  environment.osx-64.yml  environment.win-64.yml
deepali/core/: __init__.py  _kornia.py  affine.py  bspline.py  config.py  convutils.py  cube.py  enum.py  flow.py  functional.py  grid.py  image.py  itertools.py  kernels.py  linalg.py  losses.py  math.py  names.py  nnutils.py  pointset.py  random.py  tensor.py  transforms.py  types.py
deepali/data/: collate.py  dataset.py  flow.py  image.py  partition.py  prepare.py  sample.py  tensor.py  transforms.py
deepali/data/transforms/: __init__.py  image.py  item.py
deepali/losses/: __init__.py  base.py  bspline.py  flow.py  functional.py  image.py
deepali/modules/: __init__.py  basic.py  flow.py  image.py  lambd.py  mixins.py  output.py  sample.py  utilities.py
deepali/networks/: resnet.py  unet.py  utils.py
deepali/networks/blocks/: residual.py  skip.py
deepali/networks/layers/: __init__.py  conv.py  lambd.py  norm.py  pool.py  upsample.py
deepali/spatial/: __init__.py  base.py  bspline.py  composite.py  configurable.py  image.py  linear.py  nonrigid.py  parametric.py
deepali/transforms/: __init__.py  image.py  item.py
deepali/transforms/spatial/: __init__.py  base.py  bspline.py  composite.py  configurable.py  image.py  linear.py  nonrigid.py  parametric.py
deepali/utils/aws/: resource.py
deepali/utils/aws/s3/: __init__.py  client.py  config.py
deepali/utils/cli/: __init__.py  argparse.py  logging.py  warnings.py
deepali/utils/ignite/: handlers.py  output_transforms.py  score_functions.py
deepali/utils/ignite/metrics/: average_loss.py  binary_classification.py  multilabel_classification.py
deepali/utils/sitk/: imageio.py  torch.py
deepali/utils/vtk/: __init__.py  idlist.py  polydataio.py  simpleitk.py
docker/: Dockerfile  build  run
docs/: _config.yml  _toc.yml  index.md
docs/basics/: example-page.md  installation.md  markdown.md
docs/reference/core/: domain.md  flow.md  image.md  index.md
docs/reference/data/: dataset.md  index.md  sampler.md  tensor.md  transforms.md
docs/reference/losses/: index.md
docs/reference/modules/: index.md
docs/reference/networks/: index.md
docs/reference/spatial/: composite.md  configurable.md  index.md  parametric.md  transformer.md
docs/reference/utils/: index.md
docs/tutorials/: example-myst-notebook.md  notebooks.ipynb  pairwise-registration-intro.ipynb
examples/ffd/: README.md  engine.py  hooks.py  losses.py  optim.py  pairwise.py  params.yaml  register.py  utilities.py
examples/istn/: params.yaml  train.py
examples/istn/models/: __init__.py  itn.py  stn.py
src/deepali/: version.py
src/deepali/core/: __init__.py  _kornia.py  affine.py  argparse.py  bspline.py  collections.py  config.py  cube.py  enum.py  environ.py  flow.py  functional.py  grid.py  image.py  itertools.py  kernels.py  linalg.py  logging.py  math.py  nnutils.py  path.py  pathlib.py  pointset.py  psutil.py  random.py  storage.py  tempfile.py  tensor.py  types.py  typing.py
src/deepali/data/: __init__.py  collate.py  dataset.py  flow.py  image.py  prepare.py  sample.py  sampler.py  tensor.py
src/deepali/data/transforms/: __init__.py  image.py  item.py
src/deepali/losses/: __init__.py  base.py  bspline.py  flow.py  functional.py  image.py  params.py  pointset.py
src/deepali/modules/: __init__.py  basic.py  flow.py  image.py  mixins.py  output.py  sample.py  utilities.py
src/deepali/networks/: __init__.py  resnet.py  unet.py  utils.py
src/deepali/networks/blocks/: __init__.py  residual.py  skip.py
src/deepali/networks/layers/: __init__.py  acti.py  conv.py  join.py  lambd.py  linear.py  norm.py  pool.py  upsample.py
src/deepali/spatial/: __init__.py  base.py  bspline.py  composite.py  generic.py  image.py  linear.py  nonrigid.py  parametric.py  transformer.py
src/deepali/utils/: __init__.py  storage.py  tensorboard.py
src/deepali/utils/aws/: resource.py
src/deepali/utils/cli/: __init__.py  argparse.py  environ.py  logging.py
src/deepali/utils/ignite/: handlers.py  output_transforms.py  score_functions.py
src/deepali/utils/imageio/: __init__.py  meta.py  nifti.py  sitk.py
src/deepali/utils/simpleitk/: __init__.py  grid.py  imageio.py  sample.py  torch.py
src/deepali/utils/sitk/: __init__.py  grid.py  numpy.py  sample.py
tests/: _test_compose_svfs.py  _test_core_bspline.py  _test_core_flow_deriv.py  _test_core_flow_logv.py  test_core_bspline.py  test_core_cube.py  test_core_enum.py  test_core_flow_utils.py  test_core_grid.py  test_core_image_create.py  test_core_image_utils.py  test_core_random.py  test_core_tensor_utils.py  test_data_flow.py  test_data_image.py  test_losses_flow.py  test_network_blocks.py  test_network_layers.py  test_network_resnet.py  test_network_unet.py  test_spatial_transformer.py  test_utils_imageio_meta.py
(+8 files in other folders)
